k8s/challenges/mission-19.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-var
  namespace: ns-challenges
  labels:
    app: env-var
    challenge-id: ${CHALLENGE_ID}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: env-var
      challenge-id: ${CHALLENGE_ID}
  template:
    metadata:
      labels:
        app: env-var
        challenge-id: ${CHALLENGE_ID}
    spec:
      containers:
      - name: alpine
        image: alpine:latest
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        command: ["/bin/sh", "-c", "if [ -z \"$DB_HOST\" ]; then echo 'Missing DB_HOST'; exit 1; else while true; do sleep 3600; done; fi"]
