k8s/challenges/mission-20.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbac
  namespace: ns-challenges
  labels:
    app: rbac
    challenge-id: ${CHALLENGE_ID}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rbac
      challenge-id: ${CHALLENGE_ID}
  template:
    metadata:
      labels:
        app: rbac
        challenge-id: ${CHALLENGE_ID}
    spec:
      serviceAccountName: m20-sa
      containers:
      - name: kubectl
        image: bitnami/kubectl:latest
        command: ["/bin/sh", "-c", "if kubectl get secrets; then while true; do sleep 3600; done; else exit 1; fi"]
