k8s/challenges/mission-35.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m35-dockerfile
  namespace: ns-challenges
  labels:
    app: m35-dockerfile
    challenge-id: ${CHALLENGE_ID}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: m35-dockerfile
      challenge-id: ${CHALLENGE_ID}
  template:
    metadata:
      labels:
        app: m35-dockerfile
        challenge-id: ${CHALLENGE_ID}
    spec:
      containers:
      - name: alpine
        image: alpine:latest
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        command: ["/bin/sh", "-c"]
        args:
        - |
          cat << 'EOF' > /workspace/Dockerfile
          FROM node:alpine
          
          WORKDIR /app
          
          COPY package.json .
          
          RUN npm install
          
          CMD ["npm", "strat"]
          EOF
          while true; do sleep 3600; done
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        resources:
          limits:
            cpu: "100m"
            memory: "64Mi"
          requests:
            cpu: "50m"
            memory: "32Mi"
        volumeMounts:
        - name: workspace
          mountPath: /workspace
      volumes:
      - name: workspace
        emptyDir: {}
