k8s/challenges/mission-37.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m37-secret-deploy
  namespace: ns-challenges
  labels:
    app: m37-secret
    challenge-id: ${CHALLENGE_ID}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: m37-secret
      challenge-id: ${CHALLENGE_ID}
  template:
    metadata:
      labels:
        app: m37-secret
        challenge-id: ${CHALLENGE_ID}
    spec:
      containers:
      - name: alpine
        image: alpine:latest
        command: ["/bin/sh", "-c"]
        args:
        - |
          if [ "$APP_MODE" = "production" ]; then 
            echo "Environment is properly configured for production. Starting."
            while true; do sleep 3600; done; 
          else 
            echo "Error: Application must be run in production mode!"
            echo "Current APP_MODE=$APP_MODE"
            exit 1; 
          fi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        resources:
          limits:
            cpu: "100m"
            memory: "64Mi"
          requests:
            cpu: "50m"
            memory: "32Mi"
